Fixed media formatting on mobile

--- a/styles.css
+++ b/styles.css
@@ -116,4 +116,8 @@ footer {
         margin: 1rem;
         padding: 1rem;
     }
+    img.box {
+        width: 100%;
+        height: auto;
+    }
 }
